[package]
name = "limnus-app"
version = "0.0.17"
edition = "2021"
license = "MIT"
description = "Application management"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game", "render"]

[dependencies]
tracing = "0.1.40"

# State, resource and message
limnus-system-state = { path = "../system-state", version = "0.0.17" }
limnus-message = { path = "../message", version = "0.0.17" }
limnus-resource = { path = "../resource", version = "0.0.17" }
limnus-local-resource = { path = "../local-resource", version = "0.0.17" }

# System
limnus-scheduler-runner = { path = "../scheduler-runner", version = "0.0.17" }
limnus-scheduler = { path = "../scheduler", version = "0.0.17" }
limnus-system = { path = "../system", version = "0.0.17" }
limnus-stage = { path = "../stage", version = "0.0.17" }

[dev-dependencies]
limnus-system-params = { path = "../system-params", version = "0.0.17" }
limnus-default-stages = { path = "../default-stages", version = "0.0.17" }
