[package]
name = "limnus-asset-registry"
version = "0.0.18"
edition = "2024"
repository = "https://github.com/swamp/limnus"
license = "MIT"
categories = ["game-development"]
description = "keeps track of asset lifetimes"

[dependencies]
limnus-assets = { path = "../assets", version = "0.0.18" }
future-runner = "0.0.1"
limnus-app = { path = "../app", version = "0.0.18" }
limnus-assets-loader = { path = "../assets-loader", version = "0.0.18" }
limnus-loader = { path = "../loader", version = "0.0.18" }
limnus-resource = { path = "../resource", version = "0.0.18" }
limnus-local-resource = { path = "../local-resource", version = "0.0.18" }
message-channel = "0.0.1"
chunk-reader = "0.0.1"
tracing = "0.1.40"
limnus-system-params = { path = "../system-params", version = "0.0.18" }
limnus-default-stages = { path = "../default-stages", version = "0.0.18" }
