[package]
name = "limnus-assets-loader"
version = "0.0.17"
edition = "2024"
repository = "https://github.com/swamp/limnus"
license = "MIT"
categories = ["game-development"]
description = "loads assets"

[dependencies]
limnus-app = { path = "../app", version = "0.0.17" }
limnus-assets = { path = "../assets", version = "0.0.17" }
limnus-resource = { path = "../resource", version = "0.0.17" }
limnus-local-resource = { path = "../local-resource", version = "0.0.17" }
tracing = "0.1.40"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }
