[package]
name = "limnus-assets"
version = "0.0.15"
edition = "2021"
license = "MIT"
description = "store assets in a slot map"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game", "asset", "storage"]

[dependencies]
sparse-slot = "0.0.3"
limnus-macros = { path = "../macros", version = "0.0.15" }
limnus-resource = { path = "../resource", version = "0.0.15" }
tracing = "0.1.40"
limnus-asset-id = { path = "../asset-id", version = "0.0.15" }
