[package]
name = "limnus-audio-sample"
version = "0.0.16"
edition = "2021"
license = "MIT"
description = "Load .wave files into asset"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game", "audio"]

[dependencies]
hound = "3.5.1"
oddio = "0.7.4"
tracing = "0.1.40"

limnus-app = { path = "../app", version = "0.0.16" } # for the plugin
limnus-assets-loader = { path = "../assets-loader", version = "0.0.16" } # to get the loader registry
limnus-local-resource = { path = "../local-resource", version = "0.0.16" }
limnus-assets = { path = "../assets", version = "0.0.16" } # to insert the audio
limnus-asset-registry = { path = "../asset-registry", version = "0.0.16" } # To get the asset name
limnus-audio-mixer = { path = "../audio-mixer", version = "0.0.16" }
