[package]
name = "limnus-audio-sample"
version = "0.0.18"
edition = "2024"
license = "MIT"
description = "Load .wave files into asset"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game", "audio"]

[dependencies]
hound = "3.5.1"
oddio = "0.7.4"
tracing = "0.1.40"

limnus-app = { path = "../app", version = "0.0.18" } # for the plugin
limnus-assets-loader = { path = "../assets-loader", version = "0.0.18" } # to get the loader registry
limnus-local-resource = { path = "../local-resource", version = "0.0.18" }
limnus-assets = { path = "../assets", version = "0.0.18" } # to insert the audio
limnus-asset-registry = { path = "../asset-registry", version = "0.0.18" } # To get the asset name
limnus-audio-mixer = { path = "../audio-mixer", version = "0.0.18" }
