[package]
name = "limnus-audio-stream"
version = "0.0.15"
edition = "2021"
license = "MIT"
description = "Audio low level stream"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game", "audio"]

[dependencies]
tracing = "0.1.40"
limnus-app = { path = "../app", version = "0.0.15" } # for the plugin
limnus-audio-device = { path = "../audio-device", version = "0.0.15" }
limnus-audio-mixer = { path = "../audio-mixer", version = "0.0.15" }
oddio = "0.7.4"
cpal = "0.15.3"
limnus-local-resource = { path = "../local-resource", version = "0.0.15" }
