[package]
name = "limnus-basic-input"
version = "0.0.11"
edition = "2021"
repository = "https://github.com/swamp/limnus"
license = "MIT"
categories = ["game-development"]
description = "platform neutral input types"


[dependencies]
int_math = "0.0.2"

limnus-message = {path = "../message", version = "0.0.11" }
