[package]
name = "limnus-default-keys"
version = "0.0.17"
edition = "2021"
license = "MIT"
description = "Default keys implementation for limnus"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game", "input"]

[dependencies]
limnus-app = { path = "../app", version = "0.0.17" }
limnus-system-params = { path = "../system-params", version = "0.0.17" }
limnus-local-resource = { path = "../local-resource", version = "0.0.17" }
limnus-screen = { path = "../screen", version = "0.0.17" }
limnus-macros = { path = "../macros", version = "0.0.17" }
limnus-basic-input = { path = "../basic-input", version = "0.0.17" }
limnus-default-stages = { path = "../default-stages", version = "0.0.17" }
