[package]
name = "limnus-default-keys"
version = "0.0.18"
edition = "2024"
license = "MIT"
description = "Default keys implementation for limnus"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game", "input"]

[dependencies]
limnus-app = { path = "../app", version = "0.0.18" }
limnus-system-params = { path = "../system-params", version = "0.0.18" }
limnus-local-resource = { path = "../local-resource", version = "0.0.18" }
limnus-screen = { path = "../screen", version = "0.0.18" }
limnus-macros = { path = "../macros", version = "0.0.18" }
limnus-basic-input = { path = "../basic-input", version = "0.0.18" }
limnus-default-stages = { path = "../default-stages", version = "0.0.18" }
