[package]
name = "limnus-default-schedulers"
version = "0.0.15"
edition = "2021"

[dependencies]
limnus-app = { path = "../app", version = "0.0.15" }
limnus-resource = { path = "../resource", version = "0.0.15" }
limnus-system-runner = { path = "../system-runner", version = "0.0.15" }
limnus-default-stages = { path = "../default-stages", version = "0.0.15" }
limnus-stage = { path = "../stage", version = "0.0.15" }
limnus-system-state = { path = "../system-state", version = "0.0.15" }
monotonic-time-rs = "0.0.9"
limnus-clock = { path = "../clock", version = "0.0.15" }
tracing = "0.1.40"
