[package]
name = "limnus-default-schedulers"
version = "0.0.18"
edition = "2024"
license = "MIT"
description = "default schedulers for limnus. Main, Fixed and Render"
repository = "https://github.com/swamp/limnus"


[dependencies]
limnus-app = { path = "../app", version = "0.0.18" }
limnus-resource = { path = "../resource", version = "0.0.18" }
limnus-default-stages = { path = "../default-stages", version = "0.0.18" }
limnus-scheduler = { path = "../scheduler", version = "0.0.18" }
limnus-stage = { path = "../stage", version = "0.0.18" }
limnus-system-state = { path = "../system-state", version = "0.0.18" }
monotonic-time-rs = "0.0.9"
limnus-clock = { path = "../clock", version = "0.0.18" }
limnus-system-params = { path = "../system-params", version = "0.0.18" }
