[package]
name = "limnus-default-stages-plugin"
version = "0.0.16"
edition = "2021"
license = "MIT"
description = "creating the default stages"
repository = "https://github.com/swamp/limnus"


[dependencies]
limnus-app = { path = "../app", version = "0.0.16" }
limnus-default-stages = { path = "../default-stages", version = "0.0.16" }
