[package]
name = "limnus-default-stages-plugin"
version = "0.0.17"
edition = "2024"
license = "MIT"
description = "creating the default stages"
repository = "https://github.com/swamp/limnus"


[dependencies]
limnus-app = { path = "../app", version = "0.0.17" }
limnus-default-stages = { path = "../default-stages", version = "0.0.17" }
