[package]
name = "limnus-default-stages"
version = "0.0.18"
edition = "2024"
license = "MIT"
description = "limnus default stages, `First`, `PreUpdate`, `Update`, `PostUpdate`, etc"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game"]

[dependencies]
limnus-stage = { path = "../stage", version = "0.0.18" }
