[package]
name = "limnus-examples"
version = "0.0.17"
edition = "2024"
license = "MIT"
description = "examples for the limnus game engine"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game", "examples"]

[[bin]]
name = "gamepad_tester"
path = "src/bin/gamepad_tester.rs"

[dependencies]
limnus-app = { path = "../app", version = "0.0.17" }
limnus-system-params = { path = "../system-params", version = "0.0.17" }
limnus-local-resource = { path = "../local-resource", version = "0.0.17" }
limnus-gamepad = { path = "../gamepad", version = "0.0.17" }
limnus-gamepad-gilrs = { path = "../gamepad-gilrs", version = "0.0.17" }
limnus-log = { path = "../log", version = "0.0.17" }
tracing = "0.1.41"
limnus-assets-loader = { path = "../assets-loader", version = "0.0.17" }
limnus-loader = { path = "../loader", version = "0.0.17" }
limnus = { path = "../limnus", version = "0.0.17", features = ["default_keys", "default_schedulers", "audio"] }
wgpu = "23.0.0"
int_math = "0.0.2"
limnus-default-stages = { path = "../default-stages", version = "0.0.17" }
limnus-default-stages-plugin = { path = "../default-stages-plugin", version = "0.0.17" }
limnus-default-schedulers = { path = "../default-schedulers", version = "0.0.17" }
limnus-clock = { path = "../clock", version = "0.0.17" }
