[package]
name = "limnus-gamepad-gilrs"
version = "0.0.17"
edition = "2024"
license = "MIT"
description = "Small wrapper around gilrs to provide gamepad abstraction"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game", "input"]

[dependencies]
tracing = "0.1.41"
gilrs = "0.11.0"

# Gamepad resource and messages to write to
limnus-gamepad = { path = "../gamepad", version = "0.0.17" }
limnus-message = { path = "../message", version = "0.0.17" }

# For the System
limnus-system-params = { path = "../system-params", version = "0.0.17" }
limnus-local-resource = { path = "../local-resource", version = "0.0.17" }

# For the Plugin
limnus-app = { path = "../app", version = "0.0.17" }
limnus-default-stages = { path = "../default-stages", version = "0.0.17" }
