[package]
name = "limnus-gamepad"
version = "0.0.17"
edition = "2021"
license = "MIT"
description = "Platform independent gamepad management"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game", "input"]

[dependencies]
limnus-resource = { path = "../resource", version = "0.0.17" }
limnus-app = { path = "../app", version = "0.0.17" }
limnus-message = { path = "../message", version = "0.0.17" }

tracing = "0.1.41"
fixstr = "0.0.3"
