[package]
name = "limnus"
version = "0.0.15"
edition = "2021"
license = "MIT"
description = "Limnus game engine core"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game", "engine"]

[dependencies]
limnus-app = { path = "../app", version = "0.0.15" }
limnus-asset-id = { path = "../asset-id", version = "0.0.15" }
limnus-asset-registry = { path = "../asset-registry", version = "0.0.15" }
limnus-assets = { path = "../assets", version = "0.0.15" }
limnus-assets-loader = { path = "../assets-loader", version = "0.0.15" }
limnus-basic-input = { path = "../basic-input", version = "0.0.15" }
limnus-window-runner = { path = "../window-runner", version = "0.0.15" }
limnus-wgpu-window = { path = "../wgpu-window", version = "0.0.15" }
limnus-log = { path = "../log", version = "0.0.15" }
limnus-wgpu-math = { path = "../wgpu-math", version = "0.0.15" }
limnus-system-params = { path = "../system-params", version = "0.0.15" }
limnus-screen = { path = "../screen", version = "0.0.15" }
limnus-macros = { path = "../macros", version = "0.0.15" }
limnus-window = { path = "../window", version = "0.0.15" }
limnus-system-runner = { path = "../system-runner", version = "0.0.15" }
limnus-resource = { path = "../resource", version = "0.0.15" }
limnus-local-resource = { path = "../local-resource", version = "0.0.15" }
limnus-message = { path = "../message", version = "0.0.15" }
limnus-loader = { path = "../loader", version = "0.0.15" }

limnus-audio-device = { path = "../audio-device", version = "0.0.15", optional = true }
limnus-audio-sample = { path = "../audio-sample", version = "0.0.15", optional = true }
limnus-audio-stream = { path = "../audio-stream", version = "0.0.15", optional = true }
limnus-audio-mixer = { path = "../audio-mixer", version = "0.0.15", optional = true }

limnus-gamepad = { path = "../gamepad", version = "0.0.15", optional = true }
limnus-gamepad-gilrs = { path = "../gamepad-gilrs", version = "0.0.15", optional = true }

limnus-default-keys = { path = "../default-keys", version = "0.0.15", optional = true }

limnus-clock = { path = "../clock", version = "0.0.15" }
limnus-default-stage-plugin = { path = "../default-stage-plugin", version = "0.0.15" }

limnus-system-state = { path = "../system-state", version = "0.0.15" }
limnus-stage = { path = "../stage", version = "0.0.15" }
limnus-default-stages = { path = "../default-stages", version = "0.0.15" }
limnus-default-schedulers = { path = "../default-schedulers", version = "0.0.15" }
[features]
default = ["audio", "gamepad", "default_keys"]
audio = ["limnus-audio-device", "limnus-audio-sample", "limnus-audio-mixer", "limnus-audio-stream"]
gamepad = ["limnus-gamepad", "limnus-gamepad-gilrs"]
default_keys = ["limnus-default-keys"]
