[package]
name = "limnus-loader"
version = "0.0.16"
edition = "2021"
repository = "https://github.com/swamp/limnus"
license = "MIT"
categories = ["game-development"]
description = "Loads assets for limnus"


[dependencies]
message-channel = "0.0.1"
limnus-assets = { path = "../assets", version = "0.0.16" }
chunk-reader = "0.0.1"


# Plugin

limnus-app = { path = "../app", version = "0.0.16" }
limnus-resource = { path = "../resource", version = "0.0.16" }
tracing = "0.1.40"
