[package]
name = "limnus-loader"
version = "0.0.17"
edition = "2024"
repository = "https://github.com/swamp/limnus"
license = "MIT"
categories = ["game-development"]
description = "Loads assets for limnus"


[dependencies]
message-channel = "0.0.1"
limnus-assets = { path = "../assets", version = "0.0.17" }
chunk-reader = "0.0.1"


# Plugin

limnus-app = { path = "../app", version = "0.0.17" }
limnus-resource = { path = "../resource", version = "0.0.17" }
tracing = "0.1.40"
