[package]
name = "limnus-loader"
version = "0.0.18"
edition = "2024"
repository = "https://github.com/swamp/limnus"
license = "MIT"
categories = ["game-development"]
description = "Loads assets for limnus"


[dependencies]
message-channel = "0.0.1"
limnus-assets = { path = "../assets", version = "0.0.18" }
chunk-reader = "0.0.1"


# Plugin

limnus-app = { path = "../app", version = "0.0.18" }
limnus-resource = { path = "../resource", version = "0.0.18" }
tracing = "0.1.40"
