[package]
name = "limnus-macros"
version = "0.0.13"
edition = "2021"
license = "MIT"
description = "macros specific for the limnus types"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game", "derive"]

[dependencies]
quote = "1.0.37"
syn = "2.0.87"

[lib]
proc-macro = true
