[package]
name = "limnus-message"
version = "0.0.17"
edition = "2024"
license = "MIT"
description = "message container"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game", "message", "queue"]

[dependencies]
tracing = "0.1.40"

limnus-resource = { path= "../resource", version = "0.0.17" }
limnus-macros = { path = "../macros", version = "0.0.17" }

[dev-dependencies]
test-log = "0.2.16"
