[package]
name = "limnus-resource"
version = "0.0.13"
edition = "2021"
license = "MIT"
description = "resource container"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game", "resource"]

[dependencies]
limnus-macros = { path = "../macros", version = "0.0.13" }

[dev-dependencies]
