[package]
name = "limnus-resource"
version = "0.0.18"
edition = "2024"
license = "MIT"
description = "resource container"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game", "resource"]

[dependencies]
limnus-macros = { path = "../macros", version = "0.0.18" }

[dev-dependencies]
